align fixed

--- a/css/bt.css
+++ b/css/bt.css
@@ -152,7 +152,8 @@
 
  .bt-image {
      max-width: 100%;
-     height: auto
+     height: auto;
+     float: right;
  }
 
  img {
@@ -560,18 +561,13 @@
      display: inline-block !important
  }
 
- @media (max-width:1205px) {
+ @media (max-width:1205px) and (min-width: 994px) {
      .bt-auto {
          max-width: 95%
      }
 
      .bt-bar-container {
          padding: 0 20vw 0 20vw;
-     }
-
-     .bt-img-button {
-         width:100%;
-         height:260px;
      }
  }
 
@@ -607,7 +603,7 @@
      }
 
      .bt-bar-container {
-         padding: 0 10vw 0 10vw;
+         padding: 0;
      }
 
      /* Slideshow container */
@@ -644,11 +640,36 @@
 
     .bt-img-button {
         width:100%;
-        height:360px;
+        height: 400px;
+        object-fit: cover;
+    }
+
+    .bt-display-left {
+        position: absolute;
+        top: 40%;
+        left: 0%;
+        transform: translate(0%, -50%);
+        -ms-transform: translate(-0%, -50%)
+    }
+
+    .bt-display-text {
+        position: absolute;
+        top: 50%;
+        left: 0%;
+        transform: translate(0%, -50%);
+        -ms-transform: translate(-0%, -50%)
+    }
+
+     .bt-button-right {
+        position: absolute;
+        bottom: 15%;
+        right: 28%;
+        transform: translate(0%, 0%);
+        -ms-transform: translate(0%, 0%);
     }
  }
 
- @media (max-width:768px) {
+ @media (max-width:768px) and (min-width:601px) {
      .bt-modal-content {
          width: 500px
      }
@@ -689,23 +710,24 @@
 
     .bt-display-left {
         position: absolute;
+        top: 40%;
+        left: 0%;
+        transform: translate(0%, -50%);
+        -ms-transform: translate(-0%, -50%)
+    }
+
+    .bt-display-text {
+        position: absolute;
         top: 50%;
         left: 0%;
         transform: translate(0%, -50%);
         -ms-transform: translate(-0%, -50%)
     }
 
-     .bt-button-right {
-        position: absolute;
-        bottom: 10%;
-        right: 28%;
-        transform: translate(0%, 0%);
-        -ms-transform: translate(0%, 0%);
-    }
-
     .bt-img-button {
         width:100%;
-        height:360px;
+        height: 400px;
+        object-fit: cover;
     }
  }
 
@@ -752,7 +774,7 @@
 
      .homeSlide1 {
          width: 100%;
-         height: 50vh;
+         height: 400px;
          object-fit: cover;
      }
 
@@ -773,10 +795,19 @@
 
     .bt-img-button {
         width:100%;
-        height:260px;
+        height:300px;
+        object-fit: cover;
     }
 
     .bt-display-left {
+        position: absolute;
+        top: 50%;
+        left: 0%;
+        transform: translate(0%, -50%);
+        -ms-transform: translate(-0%, -50%)
+    }    
+
+    .bt-display-text {
         position: absolute;
         top: 50%;
         left: 0%;
@@ -815,45 +846,56 @@
 
      /* Slideshow container */
     .slideshow-container {
-        max-width: 75vw;
+        max-width: 100vw;
         position: relative;
         margin: auto;
     }
 
     /* Slideshow container */
     .slideshow-container1 {
-        max-width: 75vw;
+        max-width: 100vw;
         position: relative;
         margin: auto;
     }
 
      .homeSlide {
          width: 100%;
-         height: 77vh;
+         height: 500px;
          object-fit: cover;
      }
 
      .homeSlide1 {
          width: 100%;
-         height: 50vh;
+         height: 500px;
          object-fit: cover;
+     }
+
+     .bt-display-left {
+         position: absolute;
+         top: 50%;
+         left: 0%;
+         transform: translate(0%, -50%);
+         -ms-transform: translate(-0%, -50%)
+     }
+
+     .bt-display-text {
+         position: absolute;
+         top: 50%;
+         left: 0%;
+         transform: translate(0%, -50%);
+         -ms-transform: translate(-0%, -50%)
      }
 
      .bt-button-right {
         position: absolute;
         top: 50%;
-        right: 0%;
+        right: 5%;
         transform: translate(0%, -50%);
         -ms-transform: translate(0%, -50%)
     }
-
-    .bt-img-button {
-        width:100%;
-        height:360px;
-    }
  }
 
- @media (max-width:992px) {
+ @media (max-width:992px) and (min-width: 769px) {
      .bt-sidebar.bt-collapse {
          display: none
      }
@@ -887,19 +929,20 @@
 
      .homeSlide {
          width: 100%;
-         height: 77vh;
+         height: 570px;
          object-fit: cover;
      }
 
      .homeSlide1 {
          width: 100%;
-         height: 60vh;
+         height: 500px;
          object-fit: cover;
      }
 
      .bt-img-button {
          width:100%;
-         height:50vh;
+         height:300px;
+         object-fit: cover;
      }
  }
 
